--- a/skywalker/package.xml
+++ b/skywalker/package.xml
@@ -56,6 +56,16 @@
   <build_depend>rospy</build_depend>
   <build_depend>std_msgs</build_depend>
   <build_depend>geometry_msgs</build_depend>
+ 
+  <build_depend>eigen</build_depend>
+  <build_depend>moveit_core</build_depend>
+  <build_depend>moveit_ros_planning</build_depend>
+  <build_depend>moveit_ros_planning_interface</build_depend>
+  <build_depend>tf2_ros</build_depend>
+  <build_depend>tf2_eigen</build_depend>
+  <build_depend>tf2_geometry_msgs</build_depend>
+
+
   <build_export_depend>actionlib</build_export_depend>
   <build_export_depend>actionlib_msgs</build_export_depend>
   <build_export_depend>roscpp</build_export_depend>
@@ -66,6 +76,13 @@
   <exec_depend>rospy</exec_depend>
   <exec_depend>std_msgs</exec_depend>
   <exec_depend>message_generation</exec_depend>
+
+ <exec_depend>moveit_core</exec_depend>
+ <exec_depend>tf2_ros</exec_depend>
+  <exec_depend>tf2_eigen</exec_depend>
+ <exec_depend>tf2_geometry_msgs</exec_depend>
+ <exec_depend>moveit_ros_planning_interface</exec_depend>
+  <exec_depend>moveit_commander</exec_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
