--- a/skywalker/package.xml
+++ b/skywalker/package.xml
@@ -7,7 +7,7 @@
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="usman@todo.todo">usman</maintainer>
+  <maintainer email="rybalskii.igor@gmail.com">Igor Rybalskii</maintainer>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
@@ -56,6 +56,7 @@
   <build_depend>rospy</build_depend>
   <build_depend>std_msgs</build_depend>
   <build_depend>geometry_msgs</build_depend>
+  <build_depend>move_base</build_depend>
  
   <build_depend>eigen</build_depend>
   <build_depend>moveit_core</build_depend>
@@ -72,17 +73,19 @@
   <build_export_depend>rospy</build_export_depend>
   <build_export_depend>std_msgs</build_export_depend>
   <build_export_depend>geometry_msgs</build_export_depend>
+  <build_export_depend>move_base</build_export_depend>
   <exec_depend>roscpp</exec_depend>
   <exec_depend>rospy</exec_depend>
   <exec_depend>std_msgs</exec_depend>
   <exec_depend>message_generation</exec_depend>
 
- <exec_depend>moveit_core</exec_depend>
- <exec_depend>tf2_ros</exec_depend>
+  <exec_depend>moveit_core</exec_depend>
+  <exec_depend>tf2_ros</exec_depend>
   <exec_depend>tf2_eigen</exec_depend>
- <exec_depend>tf2_geometry_msgs</exec_depend>
- <exec_depend>moveit_ros_planning_interface</exec_depend>
+  <exec_depend>tf2_geometry_msgs</exec_depend>
+  <exec_depend>moveit_ros_planning_interface</exec_depend>
   <exec_depend>moveit_commander</exec_depend>
+  <exec_depend>move_base</exec_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
